@@ -655,4 +655,5 @@ INSERT INTO `gibbonPermission` (`permissionID` ,`gibbonRoleID` ,`gibbonActionID`
 CREATE TABLE `gibbonFirstAid` ( `gibbonFirstAidID` int(10) unsigned zerofill NOT NULL AUTO_INCREMENT, `gibbonPersonIDPatient` int(10) unsigned zerofill NOT NULL,`gibbonCourseClassID` int(14) unsigned zerofill NOT NULL, `gibbonPersonIDFirstAider` int(10) unsigned zerofill NOT NULL, `gibbonSchoolYearID` int(3) unsigned zerofill NOT NULL, `actionTaken` text NOT NULL, `followUp` text NOT NULL, `date` date NOT NULL, `timeIn` time NOT NULL, `timeOut` time DEFAULT NULL, `timestamp` timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP, PRIMARY KEY (`gibbonFirstAidID`) ) ENGINE=MyISAM DEFAULT CHARSET=utf8;end
 INSERT INTO `gibboni18n` (`code`, `name`, `active`, `systemDefault`, `maintainerName`, `maintainerWebsite`, `dateFormat`, `dateFormatRegEx`, `dateFormatPHP`,`rtl`) VALUES ('de_DE', 'Deutsch - Deutschland', 'N', 'N', 'Stefan Goßrau', '', 'dd-mm-yyyy', '/^(0[1-9]|[12][0-9]|3[01])[-](0[1-9]|1[012])[-](19|20)\\\d\\\d$/i', 'd-m-Y', 'N');end
 ALTER TABLE `gibbonFirstAid` CHANGE `gibbonCourseClassID` `gibbonCourseClassID` INT(14) UNSIGNED ZEROFILL NULL DEFAULT NULL;end
+UPDATE gibbonSetting SET value=(SELECT email FROM gibbonPerson WHERE gibbonPersonID=1) WHERE scope='System' AND name='organisationEmail' AND value='';end
 ";
