@@ -59,6 +59,7 @@ v13.0.00
 		System: added ability to custom order module categories in main menu
 		System: AJAXified Fast Finder
 		System: set tinyMCE default target for new links to New Window
+		System: made organisationEmail compulsory: on install, and if blank on update, it defaults to email of gibbonPersonID=1
 		Activities: added information to parent dashboard
 		Activities: efficiency improvements in displaying time slots
 		Activities: fixed bug which cut one student off print view of attendance print out
